hphp/hack/test/ifc/check/for_as_while.php.exp
=== IFC analysis results for for_as_while.php
File "for_as_while.php", line 41, characters 3-15:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "for_as_while.php", line 8, characters 17-25:
  This may be the data source with policy `PRIVATE`
  File "for_as_while.php", line 17, characters 19-27:
  This may be the data sink with policy `PUBLIC`
  File "for_as_while.php", line 35, characters 5-17:
  Another program point contributing to the illegal flow
File "for_as_while.php", line 54, characters 3-15:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "for_as_while.php", line 8, characters 17-25:
  This may be the data source with policy `PRIVATE`
  File "for_as_while.php", line 17, characters 19-27:
  This may be the data sink with policy `PUBLIC`
  File "for_as_while.php", line 47, characters 9-10:
  Another program point contributing to the illegal flow
  File "for_as_while.php", line 48, characters 5-17:
  Another program point contributing to the illegal flow
File "for_as_while.php", line 79, characters 5-17:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "for_as_while.php", line 8, characters 17-25:
  This may be the data source with policy `PRIVATE`
  File "for_as_while.php", line 17, characters 19-27:
  This may be the data sink with policy `PUBLIC`
  File "for_as_while.php", line 75, characters 9-10:
  Another program point contributing to the illegal flow
  File "for_as_while.php", line 76, characters 5-17:
  Another program point contributing to the illegal flow
  File "for_as_while.php", line 77, characters 5-12:
  Another program point contributing to the illegal flow
  File "for_as_while.php", line 78, characters 5-12:
  Another program point contributing to the illegal flow
File "for_as_while.php", line 66, characters 3-15:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "for_as_while.php", line 11, characters 15-26:
  This may be the data source with policy `PRIVATE`
  File "for_as_while.php", line 17, characters 19-27:
  This may be the data sink with policy `PUBLIC`
  File "for_as_while.php", line 60, characters 9-16:
  Another program point contributing to the illegal flow
  File "for_as_while.php", line 61, characters 5-11:
  Another program point contributing to the illegal flow
